update error fallback styles to prevent text overflow

--- a/src/providers/error-fallback.module.scss
+++ b/src/providers/error-fallback.module.scss
@@ -19,8 +19,8 @@
       text-shadow: 0 0 20px var(--clr-text-100);
     }
 
-    pre {
-      margin-top: 2rem;
+    p {
+      margin: 2rem 0 1rem;
       font-size: 1.4rem;
     }
 
